# ibilce-opengl

./: .gitignore  CMakeLists.txt  Makefile  README.md
assets/: porta_terreo.blend
assets/models/: Untitled.mtl  banheiro.mtl  bebedouro.mtl  cabines.mtl  cadeira.mtl  computador.mtl  estrutura.mtl  janela.mtl  locker_teste.mtl  pia.mtl  porta.mtl  porta_terreo.mtl  privada.mtl  rampa.mtl  sala.mtl
blender_models/: arvore_grande.blend  banheiro.blend  bebedouro.blend  bebedouro.blend1  coisamarela.blend  computador.blend  corrimao.blend  estrutura.blend  estrutura.blend1  janela.blend  janela.blend1  locker_test.blend  pia.blend  porta.blend  privada.blend  privada.blend1  rampa.blend  rampa.blend1  sala.blend  sala.blend1  teto.blend  teto.blend1
src/: app.c  app.h  defines.h
src/modules/gl_draw/: gl_draw.c  gl_draw.h
src/modules/obj_parser/: obj_parser.c  obj_parser.h
src/modules/shaders/: shaders.h
src/modules/texture/: texture.c  texture.h
src/modules/utils/: dynamic_array.c  dynamic_array.h
src/modules/utils/vertex/: vertex.h
